--- a/HomePage.html
+++ b/HomePage.html
@@ -171,10 +171,14 @@
     }
 </style>
 <br/><br/>
+<div>
+    <div class="text-center ">
+        <h1> <span class="w3-margin-right ;navbar-brand  w3-xxlarge w3-text "
+                   style="font-family: 'Baloo Bhai', cursive; color:#7B8084!important" href="HomePage.html">DisPoll</span></h1>
+    </div>
+</div>
 <div class="container col-md-offset-4">
-    <br/>
-    <br/>
-    <br/>
+
     <br/>
     <br/>
     <div class="col-container ">
@@ -199,6 +203,7 @@
         </div> -->
 
         <div>
+
                 <div class="componentColor">
                     <div class="tab btn-group">
                         <button class="tablinks active" onclick="openDIV(event, 'signUp-email-auth')"
