--- a/addDiscount.html
+++ b/addDiscount.html
@@ -139,18 +139,18 @@
         <br/>
         <div class="rightMenuColor">
             <a href="showPoll.html" class="rightMenuColor"><span class="glyphicon glyphicon-signal"
-                                                     style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
+                                                                 style="color:#7B8084"></span>&nbsp;&nbsp; نظرسنجی های
                 من </a>
         </div>
         <br/>
+        <!--        <div class="rightMenuColor">-->
+        <!--            <a href="showDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd"-->
+        <!--                                                                     style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من-->
+        <!--            </a>-->
+        <!--        </div>-->
+        <!--        <br/>-->
         <div class="rightMenuColor">
-            <a href="showDiscount.html" class="rightMenuColor"><span class="glyphicon glyphicon-usd"
-                                                     style="color:#7B8084"></span>&nbsp;&nbsp; تخفیف های من
-            </a>
-        </div>
-        <br/>
-        <div class="rightMenuColor">
-            <a href="advertisementPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-earphone"
+            <a href="advertisementPage.html" class="rightMenuColor"><span class="glyphicon glyphicon-bullhorn"
                                                                           style="color:#7B8084"></span>&nbsp;&nbsp;
                 تبلیغات </a>
         </div>
